Completando unidad 8 | DB

--- a/4º Año/Bases de Datos/Unidad 10/2. Granularidad y Aislamiento.md
+++ b/4º Año/Bases de Datos/Unidad 10/2. Granularidad y Aislamiento.md
@@ -13,7 +13,7 @@ Si un nodo se bloquea en modo intencional se está haciendo un bloqueo explícit
 > - **Modo Intencional-Exclusivo (IX)**: Se realiza un bloqueo explícito en un nivel inferior con bloqueos en modo exclusivo o en modo compartido.
 > - **Modo Intencional-Exclusivo y Compartido(SIX)**: Se realiza un bloqueo en modo exclusivo del subárbol cuya raíz sea el nodo especificado, y dicho bloqueo explícito se produce en un nivel inferior con bloqueos en modo exclusivo.
 
-## Protocolo de Bloqueo de Granularidad Múltiple
+## Protocolo de Bloqueo de Dos Fases con Granularidad Múltiple
 
 El ***protocolo de bloqueo de granularidad múltiple*** siguiente asegura la secuencialidad. En este protocolo cada transacción $T_i$ puede bloquear un nodo $Q$ usando las reglas siguientes:
 
@@ -28,8 +28,8 @@ El ***protocolo de bloqueo de granularidad múltiple*** siguiente asegura la sec
 | X   | Falso     | Falso     | Falso     | Falso     | Falso     |
 
 2. Debe bloquear la raíz del árbol en primer lugar y puede bloquearla en cualquier modo.
-3. Puede bloquear un nodo $Q$ en modo **C** o **IC** solo si está bloqueando actualmente al padre de $Q$ en modo **IX** o **IC**.
-4. Puede bloquear un nodo $Q$ en modo **X**, **IXC** o **IX** solo si está bloqueando actualmente al padre de $Q$ en modo **IX** o **IXC**.
+3. Puede bloquear un nodo $Q$ en modo **S** o **IS** solo si está bloqueando actualmente al padre de $Q$ en modo **IX** o **IS**.
+4. Puede bloquear un nodo $Q$ en modo **X**, **SIX** o **IX** solo si está bloqueando actualmente al padre de $Q$ en modo **IX** o **SIX**.
 5. Puede bloquear un nodo solo si no ha desbloqueado previamente ningún nodo, es decir, $T_i$ es de dos fases.
 6. Puede desbloquear un nodo $Q$ solo si no ha bloqueado a ninguno de los hijos de $Q$.
 
