--- a/4º Año/Bases de Datos/Unidad 8/2. Indices e Indexacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/2. Indices e Indexacion.md
@@ -11,12 +11,22 @@ Existen varias técnicas de ***indexación y asociación*** de índices. Cada un
 - Tiempo de borrado.
 - Espacio adicional requerido.
 
-Los atributos o conjunto de atributos usados para buscar en un archivo se llaman ***claves de búsqueda*** ($K_B$), cada estructura de índice está asociada con una clave de búsqueda concreta. Si el archivo que contiene los registros está ordenado secuencialmente, el índice cuya clave de búsqueda especifica el orden secuencial del archivo es el índice primario.
-Los índices primarios también se llaman ***índices con agrupación*** mientras que los índices cuyas clave de búsqueda especifican un orden diferente del orden secuencial del archivo se llaman índices secundarios o ***índices sin agrupación***.
+Los atributos o conjunto de atributos usados para buscar en un archivo reciben el nombre de ***claves de búsqueda*** ($K_B$), cada estructura de índice está asociada con una clave de búsqueda concreta. Si el archivo que contiene los registros está ordenado secuencialmente, el índice cuya clave de búsqueda especifica el orden secuencial del archivo es el índice primario.
+Los índices primarios también son llamados ***índices con agrupación*** mientras que los índices cuyas clave de búsqueda especifican un orden diferente del orden secuencial del archivo se llaman índices secundarios o ***índices sin agrupación***.
 
 ## Índices Secuenciales
 
 Por lo general se suele asumir que todos los archivos están ordenados secuencialmente según alguna clave de búsqueda, este tipo de archivos reciben el nombre de ***archivos secuenciales indexados***. Y suelen ser empleados en aquellas aplicaciones que demandan un procesamiento secuencial del archivo completo así como un acceso directo a sus registros.
+
+### Índices Secundarios
+
+Los índices secundarios son aquellos cuyas clave de búsqueda especifican un orden diferente del orden secuencial del archivo, por lo tanto, estos deben ser densos, con una entrada en el índice por cada valor de la clave de búsqueda, y un puntero a cada registro del archivo. Un índice secundario sobre una clave candidata es como un índice denso primario, con la particularidad de que los registros apuntados por los sucesivos valores del índice no están almacenados secuencialmente según ese campo.
+Si la clave de búsqueda de un índice secundario no es una clave candidata, no sería suficiente apuntar solo al primer registro de cada valor de la clave de búsqueda, ya que el resto de registros con el mismo valor de la clave de búsqueda podrían estar en cualquier otro sitio del archivo, para solucionar este problema se puede usar una estructura multinivel para implementar los índices secundarios sobre claves de búsquedas que no sean claves candidatas.
+
+>[!tldr] Consideraciones para los Índices Secundarios
+>Siguiendo el orden de un índice primario, una búsqueda secuencial es eficiente porque los registros del archivo están guardados físicamente en el mismo orden que el índice. No se puede almacenar el archivo ordenado físicamente por el orden de la clave de búsqueda del índice primario y la clave de búsqueda del índice secundario al mismo tiempo, ya que el orden de la clave de búsqueda secundaria y el orden físico difieren. Si se intenta examinar el archivo secuencialmente por el orden de la clave de búsqueda secundaria, es muy probable que la lectura de cada bloque suponga la lectura de un nuevo bloque del disco.
+>Si un archivo tiene varios índices, siempre que se modifique el archivo, se debe actualizar cada uno de ellos. Los índices secundarios mejoran el rendimiento de las consultas que emplean claves que no son la clave de búsqueda primaria, pero requieren de tiempo adicional al actualizar los archivos.
+
 ### Índices Densos y Dispersos
 
 Un ***registro índice o entrada del índice*** consiste en el valor de la clave de búsqueda y punteros a uno o más registros con ese valor de la clave de búsqueda. Por su parte el puntero a un registro consiste en el identificador del bloque en disco y un desplazamiento interno que identifica el registro dentro de ese bloque, de acuerdo al tipo de punteros utilizados podemos dividir a los índices ordenados en dos clases:
@@ -36,16 +46,7 @@ Los diseñadores del sistema debe buscar un balance entre el tiempo de acceso, e
 >[!caution] Actualización y Mantención de los Índices
 >Sin importar el tipo de índice que se esté usando, los índices se deben actualizar siempre que se inserte o borre un registro del archivo, este tipo de operaciones van a realizarse o no dependiendo de si el índice es denso o disperso, por ejemplo, en el caso de los índices dispersos, no todas las operaciones de inserción y borrados actualizarán los índices.
 
-### Índices Secundarios
-
-Los índices secundarios son aquellos cuyas clave de búsqueda especifican un orden diferente del orden secuencial del archivo, por lo tanto, estos deben ser densos, con una entrada en el índice por cada valor de la clave de búsqueda, y un puntero a cada registro del archivo. Un índice secundario sobre una clave candidata es como un índice denso primario, con la particularidad de que los registros apuntados por los sucesivos valores del índice no están almacenados secuencialmente según ese campo.
-Si la clave de búsqueda de un índice secundario no es una clave candidata, no sería suficiente apuntar solo al primer registro de cada valor de la clave de búsqueda, ya que el resto de registros con el mismo valor de la clave de búsqueda podrían estar en cualquier otro sitio del archivo, para solucionar este problema se puede usar una estructura multinivel para implementar los índices secundarios sobre claves de búsquedas que no sean claves candidatas.
-
->[!tldr] Consideraciones para los Índices Secundarios
->Siguiendo el orden de un índice primario, una búsqueda secuencial es eficiente porque los registros del archivo están guardados físicamente en el mismo orden que el índice. No se puede almacenar el archivo ordenado físicamente por el orden de la clave de búsqueda del índice primario y la clave de búsqueda del índice secundario al mismo tiempo, ya que el orden de la clave de búsqueda secundaria y el orden físico difieren. Si se intenta examinar el archivo secuencialmente por el orden de la clave de búsqueda secundaria, es muy probable que la lectura de cada bloque suponga la lectura de un nuevo bloque del disco.
->Si un archivo tiene varios índices, siempre que se modifique el archivo, se debe actualizar cada uno de ellos. Los índices secundarios mejoran el rendimiento de las consultas que emplean claves que no son la clave de búsqueda primaria, pero requieren de tiempo adicional al actualizar los archivos.
-
-## Índices Multinivel
+### Índices Multinivel
 
 Aunque se utilicen índices dispersos, el propio índice podría ser demasiado grande para un procesamiento eficiente, si un índice es lo bastante pequeño como para guardarlo en la memoria principal, el tiempo de búsqueda para encontrar una entrada sería mucho menor. Mientras que si el índice es tan grande que se debe guardar en disco, la eficiencia en las consultas disminuyen, ya que se deben subir y bajar bloques del archivo de índices.
 Los Índices se almacenan como archivos secuenciales en disco, esto significa que buscar una entrada implicará leer varios bloques de disco. Esto empeora si se están utilizando bloques de desbordamiento, puesto que se tendría que recorrer todos los registros del archivo de forma casi obligatoria.
@@ -57,8 +58,8 @@ Usando los dos niveles de indexación y con el índice más externo en memoria p
 
 ## Índices de Árbol B⁺
 
-El principal problema de los índices mencionados anteriormente es el rendimiento, ya que tanto la búsqueda en el índice como el recorrido secuencial de los datos se ven afectados negativamente a medida que aumentan los tamaños de los archivos, dado que después de cierto tiempo están obligados a reordenarse para mantener su eficiencia. En este contexto, la estructura de índice de árbol B⁺ es la más utilizada entre las estructuras de índices porque mantiene su eficiencia incluso con la inserción y eliminación de datos.
-Un índice de árbol B⁺ toma la forma de un árbol equilibrado donde la profundidad desde la raíz a cada una de sus hojas es la misma. Cada nodo que no es una hoja tiene entre $p/2$ y $p$ hijos, donde $p$ es el orden o grado del árbol el cual es fijo y depende de la cantidad de registros que puedan entrar en un bloque.
+El principal problema de los índices mencionados anteriormente es el rendimiento, ya que tanto la búsqueda en el índice como el recorrido secuencial de los datos se ven afectados negativamente a medida que aumentan los tamaños de los archivos, dado que después de cierto tiempo están obligados a reordenarse para mantener su eficiencia.
+En este contexto, la estructura de índice de árbol B⁺ es la más utilizada entre las estructuras de índices porque mantiene su eficiencia incluso con la inserción y eliminación de datos. Un índice de árbol B⁺ toma la forma de un *árbol equilibrado* donde la profundidad desde la raíz a cada una de sus hojas es la misma. Cada nodo que no es una hoja tiene entre $p/2$ y $p$ hijos, donde $p$ es el orden o grado del árbol el cual es fijo y depende de la cantidad de registros que puedan entrar en un bloque.
 Utilizar esta estructura de datos implica una reducción en el rendimiento al insertar y al borrar datos, además de ocupar espacio adicional. Aun así este tiempo adicional es aceptable incluso en archivos con altas frecuencias de modificación, ya que este tipo de estructuras evitan una reorganización masiva o total del archivo. En pocas palabras un ***índice de árbol B⁺*** es un índice multinivel en el cual todos sus nodos internos tienen la siguiente forma:
 
 $$
@@ -89,6 +90,12 @@ El proceso para buscar los registros cuyo valor de la clave de búsqueda sea $V$
 2. Se utiliza el puntero $P_i$ para acceder al siguiente nodo. Si en ese nodo no se encuentra ese valor, entonces $V \geq K_{q–1}$, donde $q$ es el número de punteros del nodo. En este caso se sigue $P_q$ hasta el siguiente nodo.
 
 Este proceso se repite, pero esta vez en uno de los nodos intermedios, hasta que finalmente se alcanza un nodo hoja. Una vez se llega a un nodo hoja, si se encuentra que el valor $K_i = V$, entonces el puntero $Pr_i$ nos conducirá al registro o cajón deseado. Si no se encuentra el valor $V$ en el nodo hoja, no existe ningún registro con el valor clave $V$.
+
+>[!note] Redundancia en el Almacenamiento de Datos
+>Nótese, que en los árboles B⁺ solos los nodos hojas tiene punteros a registros, por lo que puede suceder que ciertos valores de la clave de búsqueda se repitan en los nodos intermedios, lo que genera una redundancia en muchos casos inncesaria tal y como se ve en la imagen.
+>
+>![[arbol-bplus-ejemplo.png]]
+
 Para procesar una consulta, se tiene que recorrer un camino en el árbol desde la raíz hasta algún nodo hoja. Si hay $n$ valores de clave de búsqueda en el archivo, este camino no será más largo que $log_{p/2} (n)$. Generalmente, un nodo se construye para tener el mismo tamaño que un bloque de disco.
 
 >[!tldr] Eficiencia en las Búsquedas
@@ -98,8 +105,8 @@ El borrado y la inserción son mucho más complejos que las búsquedas, ya que p
 Para las inserciones se utiliza la misma técnica utilizada para la búsqueda de registros, si el valor de la clave de búsqueda ya aparece en el nodo hoja, se inserta un nuevo registro en el archivo y, si es necesario, un puntero al cajón. Pero si el valor de la clave de búsqueda no aparece, se inserta el valor en el nodo hoja de tal manera que las clave de búsqueda permanezcan ordenadas, para posteriormente insertar el nuevo registro en el archivo y, si es necesario, creamos un nuevo cajón con el puntero apropiado.
 Para la eliminación de un registro, primero se realiza una búsqueda para encontrar el o los registros deseados y luego eliminarlos del archivo. Si no hay un cajón asociado con el valor de la clave de búsqueda o si el cajón se queda vacío como resultado del borrado, se borra el valor de la clave de búsqueda del nodo hoja.
 
-### Índices de Árbol B
+## Índices de Árbol B
 
-Los ***índices de árbol B*** son similares a los índices de árbol B⁺, con una leve diferencia en sus enfoques, ya que los árboles B eliminan el almacenamiento redundante de los valores de la clave de búsqueda, puesto que las claves de búsqueda no están repetidas en el árbol B. Esto disminuye el espacio empleado para almacenar el índice. Sin embargo, como las claves de búsqueda que aparecen en los nodos internos no aparecen en ninguna otra parte del árbol B, se debe incluir un campo adicional para un puntero a datos por cada clave de búsqueda de un nodo interno, estos campos adicionales apuntan a registros del archivo o a los cajones de la clave de búsqueda asociada. En otras palabras, el grado de los árboles B va a ser menor a los del los árboles B⁺.
+Los ***índices de árbol B*** son similares a los índices de árbol B⁺, con una leve diferencia en sus enfoques, ya que los árboles B eliminan el almacenamiento redundante de los valores de la clave de búsqueda, puesto que las claves de búsqueda no están repetidas en el árbol B, disminuyendo el espacio empleado para almacenar el índice. Sin embargo, como las claves de búsqueda que aparecen en los nodos internos no aparecen en ninguna otra parte del árbol B, se debe incluir un campo adicional para un puntero a datos por cada clave de búsqueda de un nodo interno, estos campos adicionales apuntan a registros del archivo o a los cajones de la clave de búsqueda asociada. En otras palabras, el grado de los árboles B va a ser menor a los del los árboles B⁺.
 Una de las principales desventajas de los árboles B es que en caso de que se utilice dicho índice para buscar múltiples registros, se tendrá que hacer el recorrido del árbol para cada uno de estos registros, mientras que en los árboles B⁺ solo se debe ir hasta las hojas y luego recorrerlas de forma secuencial, lo que ahorra más tiempo.
 
