--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
@@ -1,12 +1,12 @@
 El cálculo de predicados es la intersección de un conjunto de teorías de primer orden que engloba a su vez al cálculo proposicional. Esto quiere decir que todo lo definido hasta el momento para el cálculo proposicional es aplicable también el cálculo de predicados.
 
-#### Limitaciones del Cálculo Proposicional
-El cálculo proposicional presenta algunas falencias desde el punto de vista de su capacidad de representación. En especial cuando se intenta representar propiedades de individuos, ya que no es posible realizar tal acción de manera natural. Esta habilidad es provista en el cálculo de predicados.
+>[!tldr] Limitaciones del Cálculo Proposicional
+>El cálculo proposicional presenta algunas falencias desde el punto de vista de su capacidad de representación. En especial cuando se intenta representar propiedades de individuos, ya que no es posible realizar tal acción de manera natural. Esta habilidad es provista en el cálculo de predicados.
 
 #### Predicados y cuantificadores
-La palabra ***predicado*** tiene varios significados, entre ellos se considera a un predicado como *la afirmación de una cualidad, atributo, propiedad de un individuo* o también como *la parte de una sentencia que expresa lo que se dice del sujeto*. Por ejemplo, en la oración "*Pedro es alto*" se dice que el individuo Pedro (sujeto) tiene el atributo o propiedad de ser alto (predicado).
 
-En el cálculo proposicional ($L$) podemos representar dicha afirmación como $A_1$, pero esto no refleja la semántica que se intenta tener de las sentencias representadas. El cálculo de predicados permite mantener la conexión entre la representación y lo que se quiere representar, por ejemplo, para representar la altura de Pedro y Juan se lo puede hacer de la siguiente manera `alto(pedro)`, `alto(juan)`. Esta expresividad le permite al cálculo de predicados expresar relaciones que existen entre los sujetos de una relación y sentencias mucho más complejas, ya que se introducen ***cuantificadores*** que permiten referirse a individuos de forma general, estos operadores son:
+La palabra ***predicado*** tiene varios significados, entre ellos se considera a un predicado como *la afirmación de una cualidad, atributo, propiedad de un individuo* o también como *la parte de una sentencia que expresa lo que se dice del sujeto*. Por ejemplo, en la oración "*Pedro es alto*" se dice que el individuo Pedro (sujeto) tiene el atributo o propiedad de ser alto (predicado).
+En el cálculo proposicional ($\mathcal{L}$) podemos representar dicha afirmación como $A_1$, pero esto no refleja la semántica que se intenta tener de las sentencias representadas. El cálculo de predicados permite mantener la conexión entre la representación y lo que se quiere representar, por ejemplo, para representar la altura de Pedro y Juan se lo puede hacer de la siguiente manera `alto(pedro)`, `alto(juan)`. Esta expresividad le permite al cálculo de predicados expresar relaciones que existen entre los sujetos de una relación y sentencias mucho más complejas, ya que se introducen ***cuantificadores*** que permiten referirse a individuos de forma general, estos operadores son:
 
 1. El cuantificador $\forall$, es el cuantificador universal y permite hacer referencia a todos los individuos de un dominio en particular. Por ejemplo $(\forall x) (perro(x) \rightarrow mamifero(x))$.
 2. El cuantificador $\exists$, es el cuantificador de existencia y permite hacer referencia a uno o más individuos en el dominio sin especificar de forma explícita cuál es. Por ejemplo $((\exists x) hablo(x))$.
@@ -80,7 +80,7 @@ Puede que una fórmula bien formada $A$ no sea ni verdadera ni falsa en una inte
 3. En una interpretación particular de la forma $A \rightarrow B$ es falsa si $A$ es verdadera y $B$ es falsa.
 4. Para los conectivos introducidos por reescritura:
 	- $s$ satisface $A \wedge B$ si y solo si $s$ satisface $A$ y $B$ simultáneamente.
-	- $s$ satisface $A \vee B$ si y solo si $s$ satisface $A$ o $B$.
+	- $s$ satisface $A \vee B$ si y solo si $s$ satisface $A$ o $B$ o ambas.
 	- $s$ satisface $A \equiv B$ si y solo si $s$ satisface $A$ y $B$ simultáneamente o $s$ no satisface a ninguno de los dos.
 	- $s$ satisface $((\forall x_i)A)$ si existe $s'$ que difiere de $s$ en a lo sumo el lugar $i$, tal que $s'$ satisface $A$.
 5. La fórmula bien formada $A(x)$ es verdadera si su clausura $((\forall x_i)A(x))$ es verdadera. La clausura de una fórmula bien formada $A$ se obtiene prefijándola con un cualificador universal para cada variable que aparece libre en $A$.
