--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 3/2. Deduccion en el Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 3/2. Deduccion en el Calculo de Predicados.md
@@ -4,8 +4,8 @@ Los axiomas del cálculo de predicados son los siguientes:
 1. $PC_1: (A \rightarrow (B \rightarrow A))$. Esto significa que si $A$ es verdadera, entonces $B→A$ también es verdadera, independientemente del valor de $B$.
 2. $PC_2: ((A \rightarrow (B \rightarrow C)) \rightarrow ((A \rightarrow B) \rightarrow (A \rightarrow C)))$. Este axioma permite reorganizar implicaciones y es esencial para construir pruebas lógicas más complejas.
 3. $PC_3: (((¬B) \rightarrow (¬A)) \rightarrow (((¬B) \rightarrow A) \rightarrow B))$. Relaciona negaciones e implicaciones, permitiéndonos inferir $B$ bajo ciertas condiciones.
-4. $PC_4: (\forall x)A(x) \rightarrow A(t)$ donde $t$ es término libre para $x$ en $A$. Si algo es cierto para **todos** los $x$, entonces es cierto para un **caso especifico** $t$, siempre que $t$ no cause conflictos en la formula al sustituir.
-5. $PC_5:(\forall x)( A \rightarrow B)\rightarrow(A \rightarrow (\forall x)B)$ si $A$ no contiene ninguna aparición libre de $x$. Si $A$ implica $B$ para **todos** los $x$, y $A$ no depende de $x$, entonces $A$ implica que $B$ es cierto para todos los $x$.
+4. $PC_4: (\forall x)A(x) \rightarrow A(t)$ donde $t$ es término libre para $x$ en $A$. Si algo es cierto para todos los $x$, entonces es cierto para un caso especifico $t$, siempre que $t$ no cause conflictos en la formula al sustituir.
+5. $PC_5:(\forall x)( A \rightarrow B)\rightarrow(A \rightarrow (\forall x)B)$ si $A$ no contiene ninguna aparición libre de $x$. Si $A$ implica $B$ para todos los $x$, y $A$ no depende de $x$, entonces $A$ implica que $B$ es cierto para todos los $x$.
 
 ## Variables Libres y Ligadas
 
@@ -20,7 +20,7 @@ Dada una fórmula bien formada del tipo $((\forall x) P)$, la fórmula $P$ se di
 ### Términos Libres para una Variable en una Fórmula Bien Formada
 
 Sea $A$ una fórmula bien formada y $t$ un término, $t$ se dice libre para una variable $x_i$ en $A$ si y solo si no existen apariciones libres de $x_i$ en $A$ que caen dentro del alcance de un cuantificador $(\forall x_k)$ donde $x_k$ es una variable en $t$.
-Un término sin variables claramente está libre para cualquier variable en cualquier fórmula bien formada. Un término $t$ es libre para cualquier variable en $A$ si ninguna de las variables de $t$ está ligada en $A$ y cualquier variable está siempre libre para ella misma en cualquier fórmula bien formada.
+Un término sin variables claramente está libre para cualquier variable en cualquier fórmula bien formada. Un término $t$ es libre para cualquier variable en $A$ si ninguna de las variables de $t$ está ligada en $A$ y cualquier variable está siempre libre para ella misma en cualquier fórmula bien formada. Esto significa que si reemplazamos $x$, siendo $x$ una variable libre, por $t$ la variable seguiría siendo libre. Por ejemplo el término $h(x,y)$ no es libre para $y$ en la siguiente fórmula bien formada $((\forall x) p(x)) \rightarrow (\forall x)q(x, y)$, ya que $y$ está libre en el consecuente, y si reemplazamos $y$ con $h(x, y)$, se introduciría un nuevo término ligado en este caso $x$ de $h$.
 Para determinar si $t$ está libre para $x$ en $A$, primero se encuentran todas las apariciones libres de $x$ ignorando las apariciones ligadas de $x$. Si no existen apariciones libres de $x$ entonces $t$ está libre para $x$ en $A$. Posteriormente, para cada aparición libre de $x$ se debe verificar si dicha aparición está dentro del alcance de un cuantificador que liga una variable que aparece en $t$, esto conlleva realizar las siguientes acciones:
 
 1. Si la respuesta es positiva entonces $t$ no está libre para $x$ en $A$.
